# generic-container

./: .gitignore  Cargo.toml  Justfile  README.md  clippy.toml
check/: Cargo.toml
check/src/: commands.rs  data.rs  main.rs  package_cache.rs  parsing.rs
crates/generic-container/: Cargo.toml  README.md
crates/generic-container/src/: contained.rs  container_traits.rs  generic_container.rs  kinds.rs  lib.rs
crates/generic-container/src/impls/: arc.rs  arc_checked_mutex.rs  arc_mutex.rs  arc_rwlock.rs  box_container.rs  checked_rc_refcell.rs  mod.rs  rc.rs  rc_refcell.rs  t_itself.rs
crates/generic-container/src/kinds/: dupe_kind_traits.rs  mod.rs
crates/thread-checked-lock/: Cargo.toml  README.md
crates/thread-checked-lock/src/: error.rs  lib.rs  locked_mutexes.rs  locked_mutexes_inner.rs  mutex.rs  mutex_id.rs
crates/thread-checked-mutex/: Cargo.toml
crates/thread-checked-mutex/src/: error.rs  lib.rs  locked_mutexes.rs  locked_mutexes_inner.rs  mutex.rs  mutex_id.rs
