[package]
name         = "generic-container"
authors      = ["Finley Huggins"]
description  = 'Abstract over "containers" that hold a T, such as a T itself, Box<T>, or Arc<Mutex<T>>'
readme       = "README.md"
keywords     = ["abstraction", "generic", "box", "rc", "arc"]
categories   = ["memory-management", "concurrency", "rust-patterns", "no-std", "no-std::no-alloc"]
# TODO: explicitly define `include`
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true


[dependencies]
thread-checked-lock = { workspace = true, optional = true }

[dev-dependencies]
dupe.workspace = true

[features]
default = ["std"]
thread-checked-lock = ["dep:thread-checked-lock", "std"]
std = ["alloc"]
alloc = []
