[package]
name         = "generic-container"
authors      = ["Finley Huggins"]
description  = 'Abstract over "containers" that hold a T, such as a T itself, Box<T>, or Arc<Mutex<T>>'
readme       = "README.md"
keywords     = ["abstraction", "generic", "box", "rc", "arc"]
categories   = ["memory-management", "concurrency", "rust-patterns", "no-std", "no-std::no-alloc"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.2.1"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true


[dependencies]
thread-checked-lock = { workspace = true, optional = true }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
dupe.workspace = true

[package.metadata.docs.rs]
features = ["std", "kinds", "thread-checked-lock"]

[features]
default = ["std"]

std = ["alloc"]
alloc = ["serde?/alloc", "serde?/rc"]

kinds = []

thread-checked-lock = ["dep:thread-checked-lock", "std"]
serde = ["dep:serde"]
