[package]
name         = "thread-checked-lock"
authors      = ["Finley Huggins"]
description  = "Gracefully error when a thread attempts to acquire the same lock twice"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["mutex", "checked", "deadlock"]
categories   = ["concurrency", "memory-management"]
# TODO: explicitly define `include`
version      .workspace = true
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[dependencies]
