[package]
name         = "thread-checked-lock"
authors      = ["Finley Huggins"]
description  = "Gracefully error when a thread attempts to acquire the same lock twice"
readme       = "README.md"
keywords     = ["mutex", "checked", "deadlock"]
categories   = ["concurrency", "memory-management"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.1"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "std"], optional = true }
